Clean up .gitignore, fix test resource leaks, and remove stale build artifacts